libs/internal-dns/chainsaw-test/external-dns-running-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: internal-dns-test
status:
  phase: Running
  conditions:
    - type: Ready
      status: "True"
