libs/internal-dns/chainsaw-test/onepassword-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: onepassword-operator
status:
  conditions:
    - type: Available
      status: "True"
