libs/internal-dns/chainsaw-test/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: internal-dns-test
  annotations:
    external-dns.alpha.kubernetes.io/hostname: test.enigma.vgijssel.nl
spec:
  ingressClassName: nginx
  rules:
    - host: test.enigma.vgijssel.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-service
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: internal-dns-test
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  namespace: internal-dns-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: nginx
          image: nginx:1.27.3-alpine
          ports:
            - containerPort: 8080
